rest spred ... operators

--- a/package.json
+++ b/package.json
@@ -7,11 +7,22 @@
     "one-liner-joke": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@webpack-cli/migrate": "^0.1.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-destructuring": "^7.5.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-es2016": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@webpack-cli/migrate": "^0.1.8",
     "autoprefixer": "^9.5.1",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
+    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -23,17 +34,9 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "webpack": "^4.31.0",
+    "webpack": "^4.39.2",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-es2016": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-stage-0": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-plugin-transform-class-properties": "^6.24.1"
+    "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
